tests/errors/compiler/predef_but_notdef/predef_and_call.c
int func();

void main()
{
	func();
}
